--- a/recipes/beans.html
+++ b/recipes/beans.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipes</title>
+    <title>Beans Recipe</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1> 
-    <a href="recipes/beans.html">Beans</a>
+    <h1>Beans</h1>
 </body>
 </html>
