Added ingredients and steps to beans recipe.

--- a/recipes/beans.html
+++ b/recipes/beans.html
@@ -8,5 +8,27 @@
 </head>
 <body>
     <h1>Beans</h1>
+    <img src="https://www.simplyrecipes.com/thmb/86Bb6mlKhLP7a7QzgeEX9PhjSXE=/1600x1134/filters:fill(auto,1)/__opt__aboutcom__coeus__resources__content_migration__simply_recipes__uploads__2009__07__spicy-citrusy-black-beans-horiz-a-1600-8e0f7caaf2e949bf9cbe05541126a4bb.jpg" alt="cooked black beans" width="400" height="300">
+    <h4>Delicious Black Beans</h4>
+    <ul>
+        <li>28 oz. can of black beans</li>
+        <li>1/2 of a red onion</li>
+        <li>1 jalapeno pepper</li>
+        <li>white vinegar</li>
+        <li>kosher salt to taste</li>
+    </ul>
+
+    <h2>Steps</h2>
+    <ol>
+        <li>Chop onion and jalapeno into rough slices.</li>
+        <li>Heat a tablespoon of neutral oil in a pot over medium-high heat. Sautee the onions in the pot for 5 minutes--until soft. Then add the pepper to the pot and sautee for an additional few minutes. Do not let onions or peppers brown.</li>
+        <li>Open can of beans and pour them into hot pot with their liquid.</li>
+        <li>Add 2-3 tablespoons of white vinegar.</li>
+        <li>Stir beans so that vegatables and vinegar are evenly distributed.</li>
+        <li>Let beans cook in the pot for at least 6 minutes.</li>
+        <li>(OPTIONAL): Use potato masher to mash beans into a mushier state.</li>
+    </ol>
+
+
 </body>
 </html>
